# OmniPython-template

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: ci.yml
examples/: interactive.py  mandelbrot_cli.py
src/mandelbrot_chaos/: logistic.py  mandelbrot.py  visualization.py
