[tool.poetry]
name = "omnipython"
version = "0.0.1"
description = "Python starter template"
authors = ["Wyatt Au <wyatt_au@protonmail.com>"]
readme = "README.md"
license = "AGPLv3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "mandelbrot_chaos", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^1.26.3"
numba = "^0.61.0"
matplotlib = "^3.8.2"
ipython = "^8.18.1"
scipy = "^1.12.0"
rich = "^13.7.0"
click = "^8.1.7"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
typer = "^0.16.0"
package-name = "^0.1"

[tool.poetry.group.dev.dependencies]
black = { version = "^24.0", extras = ["d"] }
ruff = "^0.4.2"
mypy = "^1.10"
pytest = "^8.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0"
pre-commit = "^3.6.0"
respx = "^0.21.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
types-requests = "^2.31.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.poetry.scripts]
mandelbrot = "examples.mandelbrot_cli:app"
logistic = "examples.logistic_cli:app"
interactive = "examples.interactive:app"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "F",   # Pyflakes
    "I",   # Isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific
]
lint.ignore = ["S108"]
lint.unfixable = ["T20", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
